fix the overflow issue

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -22,6 +22,7 @@ header {
     position: fixed;
     top: 4px;
     left: calc(50% - 45px);
+    margin: 0;
     .logo {
       width: 90px;
       height: 90px;
@@ -34,6 +35,7 @@ header {
     color: var(--sec-color);
     text-shadow: 0 0 4px rgb(0, 0, 0);
   }
+
   nav {
     position: relative;
     justify-self: end;
