--- a/src/styles/_product.scss
+++ b/src/styles/_product.scss
@@ -1,14 +1,12 @@
 .Product_Pages {
   display: grid;
-  grid-template-columns: 50vw 1fr;
+  grid-template-columns: 1fr 1fr;
   justify-content: space-between;
   align-items: start;
-  overflow-y: hidden;
-  max-width: 99vw;
   @media only screen and (max-width: 1040px) {
     justify-content: center;
     gap: 35px;
-    grid-template-columns: 100vw;
+    grid-template-columns: auto;
   }
 
   .product-info-container {
@@ -93,7 +91,7 @@
   .Slider {
     justify-self: center;
     border-radius: 10px;
-    width: 45vw;
+    width: 44vw;
     margin-top: 35px;
 
     @media only screen and (max-width: 1040px) {
